# climake

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: tests.yml
examples/: cli_help_print.rs  dynamic_args.rs  header_print.rs  header_showcase.rs  help_empty.rs  help_print.rs  help_subcommand.rs  readme_showcase.rs  simple.rs
examples/torro_climake/: .gitignore  Cargo.toml  README.md
examples/torro_climake/src/: main.rs
scripts/: README.md  docstring.py
src/: argument.rs  call_type.rs  io.rs  lib.rs  main.rs  parse.rs  parsed.rs  prelude.rs  subcommand.rs  utils.rs
src/core/: argument.rs  cli_make.rs  mod.rs  subcommand.rs  utils.rs
src/core/cli_make/: impl_basic.rs  impl_help.rs  impl_parse.rs  mod.rs
tests/: general_error.rs  header_msg.rs  help_msgs.rs
tests/data/: file.txt
