[package]
name = "climake"
description = "The simplistic, dependency-free cli library ✨"
repository = "https://github.com/rust-cli/climake"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "3.0.0-pre.1"
keywords = ["parser", "cli", "parse", "arg", "argument"]
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"
